--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo": "~52.0.36",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
+    "expo-camera": "^16.0.18",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
@@ -35,7 +36,7 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-localization": "~16.0.1",
-    "expo-location": "~18.0.7",
+    "expo-location": "~18.0.8",
     "expo-router": "^4.0.17",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
@@ -44,6 +45,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "i18n-js": "^4.5.1",
+    "lucide-react-native": "^0.482.0",
     "moti": "^0.30.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
