--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "firebase": "^11.6.0",
     "i18n-js": "^4.5.1",
     "lucide-react-native": "^0.482.0",
     "moti": "^0.30.0",
